web/wp-content/themes/cncf-twenty-two/source/scss/blocks/_columns.scss
// Overwrites the terrible WordPress defaults.
@media (min-width: 600px) and (max-width: 781px) {
	body .wp-block-columns:not(.is-not-stacked-on-mobile) > .wp-block-column:not(:only-child) {
		flex-basis: 100% !important;
	}
	body .wp-block-columns:not(.is-not-stacked-on-mobile) > .wp-block-column:nth-child(even) {
		margin-left: 0 !important;
	}
}

// Experimental.
// Overrides terrible WordPress default bottom margin.
body .wp-block-columns {
	margin-bottom: 0;
}

.is-style-blob-grid {
	gap: 50px;
	.wp-block-column:nth-child(2) {
		@media (min-width: 1000px) {
			max-width: 580px;
		}
	}
	.wp-block-image {
		margin-top: 0;
		.alignleft {
			margin-right: 0;
			margin-top: 0;
		}
	}
}

.wp-block-columns {
	&.is-style-50px-padding {
		padding: 25px;
		@media (min-width: 800px) {
			padding: 45px 50px;
		}
	}
}

.wp-block-columns:not(.is-not-stacked-on-mobile) {
	&.is-style-0px-gap {
		gap: 0px;
	}
	&.is-style-50px-gap {
		gap: 50px;
	}
	&.is-style-70px-gap {
		gap: 70px;
	}
}

